--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "paystack": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-paystack": "^4.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
