--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4.1.13",
 		"@tailwindcss/typography": "^0.5.19",
-		"autoprefixer": "^10.4.21",
 		"bits-ui": "^2.11.4",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
@@ -40,7 +40,7 @@
 		"sveltekit-superforms": "^2.27.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.13",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.45.0",
