--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.39.7",
 		"svelte-check": "^4.3.2",
+		"svelte-motion": "^0.12.2",
 		"sveltekit-superforms": "^2.27.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.1.13",
-		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.45.0",
 		"vite": "^7.1.7",
@@ -50,6 +51,7 @@
 	"dependencies": {
 		"@tanstack/table-core": "^8.21.3",
 		"airtable": "^0.12.2",
+		"cobe": "^0.6.5",
 		"mode-watcher": "^1.1.0"
 	}
 }
