--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.1.17",
+		"@tailwindcss/vite": "^4.1.15",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.45.0",
