--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
 		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.15",
 		"bits-ui": "^2.11.4",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
@@ -42,7 +43,6 @@
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^4.1.17",
-		"@tailwindcss/vite": "^4.1.15",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.45.0",
@@ -50,6 +50,7 @@
 		"zod": "^4.1.11"
 	},
 	"dependencies": {
+		"@ethercorps/sveltekit-og": "^4.2.1",
 		"@tanstack/table-core": "^8.21.3",
 		"airtable": "^0.12.2",
 		"cobe": "^0.6.5",
